--- a/Fragments/app/src/main/res/layout/fragment_tendencias.xml
+++ b/Fragments/app/src/main/res/layout/fragment_tendencias.xml
@@ -12,5 +12,13 @@
     android:layout_height="match_parent">
 
 </androidx.recyclerview.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        />
 
 </FrameLayout>
