--- a/Fragments/app/src/main/res/values/themes.xml
+++ b/Fragments/app/src/main/res/values/themes.xml
@@ -28,4 +28,8 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
 
     </style>
+    <style name="Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu" parent="Widget.Material3.TextInputLayout.FilledBox">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
 </resources>
