--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -77,6 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4" >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputUserNameUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -98,6 +99,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextText" >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputPasswordUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"/>
@@ -123,6 +125,7 @@
         app:counterMaxLength="200"
         android:maxHeight="150dp">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputDescripcionUpdate"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:scrollbars="vertical"/>
