--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -21,7 +21,7 @@
 
         <ImageView
             android:id="@+id/backEditProfile"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:padding="7dp"
             android:src="@drawable/ic_back"/>
@@ -29,18 +29,21 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:padding="7dp"
-            android:text="Nombre de usuario"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:fontFamily="@font/caviardreams"
             android:gravity="center"
             android:layout_weight="1"
-            android:textSize="20dp"/>
+            android:textSize="25sp"/>
 
         <ImageView
-            android:id="@+id/espaciado"
-            android:layout_width="wrap_content"
+            android:id="@+id/check"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:padding="7dp"
-            android:src="@drawable/ic_back"
-            android:visibility="invisible"/>
+            android:padding="4dp"
+            android:layout_weight="0"
+            android:src="@drawable/check"
+            app:tint="@color/black" />
     </LinearLayout>
 
     <ImageView
