Go to Singleton version and AlertDialog done for delete user

--- a/Fragments/app/src/main/res/layout/fragment_profile.xml
+++ b/Fragments/app/src/main/res/layout/fragment_profile.xml
@@ -88,7 +88,7 @@
         app:layout_constraintGuide_percent="0.2" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/UserNameProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User Name"
@@ -126,6 +126,7 @@
 
 
     <TextView
+        android:id="@+id/descripcionProfile"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="20dp"
