--- a/Fragments/app/src/main/res/layout/activity_comentarios.xml
+++ b/Fragments/app/src/main/res/layout/activity_comentarios.xml
@@ -155,4 +155,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="65dp"
+        android:layout_height="70dp"
+        app:icon="@drawable/agregar"
+        android:layout_margin="30dp"
+        app:iconSize="55dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/commentRecycler"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
