--- a/Fragments/app/src/main/res/layout/fragment_mis_publicaciones.xml
+++ b/Fragments/app/src/main/res/layout/fragment_mis_publicaciones.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/tendenciasRecyclerView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
