--- a/Fragments/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Fragments/app/src/main/res/layout/activity_edit_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fondoAppEditProfile"
     tools:context=".EditProfile">
 
 
@@ -119,7 +120,7 @@
         android:gravity="center"
         android:inputType="text"
         android:text="Descripcion"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/editTemasProfile"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
@@ -134,7 +135,7 @@
             android:scrollbars="vertical"/>
     </com.google.android.material.textfield.TextInputLayout>
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/editTemasProfile"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Editar Temas"
@@ -158,7 +159,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline24"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTemasProfile" />
 
 
     <androidx.constraintlayout.widget.Guideline
