(change) I have modified some methods in the controllers, adapting them to queries

--- a/Fragments/app/src/main/res/layout/activity_comentarios.xml
+++ b/Fragments/app/src/main/res/layout/activity_comentarios.xml
@@ -58,7 +58,7 @@
             android:gravity="center"
             android:text="Titulo"
             android:textAlignment="center"
-            android:textSize="24dp"
+            android:textSize="20dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +83,7 @@
             android:layout_height="wrap_content"
             android:text="UserName"
             android:textSize="14dp"
+            android:layout_marginTop="5dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imageView5"
             app:layout_constraintStart_toStartOf="@+id/imageView5"
