--- a/Fragments/app/src/main/res/layout/activity_chat.xml
+++ b/Fragments/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:src="@drawable/simplearrow"
     tools:context=".ChatActivity">
+
+    <ImageView
+        android:id="@+id/fondoChat"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:src="@drawable/ic_app"
+        android:alpha="0.1"
+        app:layout_constraintBottom_toBottomOf="@+id/ConversationListRecyclerView"
+        app:layout_constraintEnd_toEndOf="@+id/ConversationListRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -34,6 +47,13 @@
             android:layout_gravity="center"
             android:gravity="right"
             android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/iconChat"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:scaleX="-1"
+            android:src="@drawable/ic_hombre"/>
 
     </LinearLayout>
 
