--- a/Fragments/app/src/main/res/layout/cv_row_chat.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chat.xml
@@ -4,44 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="20dp"
+    android:paddingTop="10dp"
     android:id="@+id/ConstraitLayoutChatRow">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardMessage"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="20dp">
+        tools:layout_editor_absoluteY="20dp"
+        android:layout_marginBottom="20dp"
+        >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/contenidoPublicacion"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="texto"
-                android:textAlignment="center" />
+                android:padding="8dp"
+                android:maxWidth="200dp"
+                android:text="mensaje"
+                />
 
             <TextView
                 android:id="@+id/CardFecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:padding="5dp"
-                android:text="Tema de la publicacion"
+                android:text="fecha"
                 android:textSize="10sp"
                 tools:ignore="SmallSp" />
         </LinearLayout>
-        >
+
 
     </androidx.cardview.widget.CardView>
 
