--- a/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_chatlist.xml
@@ -7,6 +7,7 @@
     android:id="@+id/ConstraitLayoutChatRow">
 
     <androidx.cardview.widget.CardView
+        android:layout_marginTop="20dp"
         android:id="@+id/cardChat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,22 +22,44 @@
             android:paddingRight="5dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/personaChat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="Persona"
-                android:textSize="20dp" />
 
-            <TextView
-                android:id="@+id/contenidoMensaje"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:alpha="0.8"
-                android:padding="10dp"
-                android:text="texto"
-                android:textAlignment="center" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iconListChat"
+                    android:layout_width="55dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/ic_mujer" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/personaChat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:text="User name"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:id="@+id/contenidoMensaje"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.8"
+                        android:layout_marginLeft="5dp"
+                        android:text="ultimo mensaje"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/CardChatFecha"
@@ -44,9 +67,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:padding="5dp"
-                android:text="Tema de la publicacion"
+                android:text="fecha ultimo mensaje"
                 android:textSize="12sp"
                 tools:ignore="SmallSp" />
+            <TextView
+                android:id="@+id/separacionListChat"
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="1dp"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
