--- a/Fragments/app/src/main/res/layout/activity_comentarios.xml
+++ b/Fragments/app/src/main/res/layout/activity_comentarios.xml
@@ -60,13 +60,13 @@
             android:textAlignment="center"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+            app:layout_constraintBottom_toBottomOf="@+id/iconUserPublish"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/iconUserPublish"
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:layout_marginRight="25dp"
@@ -85,9 +85,9 @@
             android:textSize="14sp"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/imageView5"
-            app:layout_constraintStart_toStartOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+            app:layout_constraintEnd_toEndOf="@+id/iconUserPublish"
+            app:layout_constraintStart_toStartOf="@+id/iconUserPublish"
+            app:layout_constraintTop_toBottomOf="@+id/iconUserPublish" />
 
         <TextView
             android:id="@+id/contenido"
