--- a/Fragments/app/src/main/res/values-en-rUS/english.xml
+++ b/Fragments/app/src/main/res/values-en-rUS/english.xml
@@ -1,7 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Foroex</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="userName"> User Name</string>
     <string name="password"> Password</string>
 
