--- a/Fragments/app/src/main/res/values-es-rES/spanish.xml
+++ b/Fragments/app/src/main/res/values-es-rES/spanish.xml
@@ -1,14 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Foroex</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="userName"> User Name</string>
     <string name="password"> Password</string>
 
     <string-array name="Gender">
-        <item>Male</item>
-        <item>Female</item>
+        <item>Hombre</item>
+        <item>Mujer</item>
     </string-array>
-
 
 </resources>
