(ended) Language changed throughout the entire app and updated the current activity.

--- a/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
+++ b/Fragments/app/src/main/res/layout/activity_login_sign_up.xml
@@ -10,7 +10,7 @@
     <Button
         android:id="@+id/buttonSignUp"
         style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="wrap_content"
+        android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:text="Registrarse"
         app:layout_constraintBottom_toTopOf="@+id/guideline18"
@@ -22,22 +22,22 @@
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:text="Iniciar sesión"
         app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordHint" />
 
     <ImageView
         android:id="@+id/logoApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/userNameHint"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_app" />
 
@@ -55,11 +55,11 @@
         app:layout_constraintTop_toBottomOf="@+id/logoApp" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/edTextNameLogIn"
+        android:id="@+id/userNameHint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/usuario"
-        app:layout_constraintBottom_toTopOf="@+id/password"
+        app:layout_constraintBottom_toTopOf="@+id/passwordHint"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline10"
         app:layout_constraintTop_toTopOf="@+id/guideline4">
@@ -71,7 +71,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password"
+        android:id="@+id/passwordHint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -122,32 +122,16 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9" />
 
-    <ImageView
-        android:id="@+id/imageView5"
+    <Spinner
+        android:id="@+id/listaLanguages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        style="@style/Widget.AppCompat.DropDownItem.Spinner"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/language" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-        app:layout_constraintEnd_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5">
-
-        <AutoCompleteTextView
-            android:id="@+id/listaGender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ES"
-            android:inputType="none" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
+    </Spinner>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
